# python_ashprj

./: LICENSE  README.md  pyproject.toml
ashprj/: ashprj.py
data/: ashampoo_burning_studio_25_test_1.ashprj  burnaware_free.bafl  cdburnderxp.dxp  imgburn_test_1.ibb
python_backup_tool/: python_backup_tool.py
