[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_ashprj"
version = "1.0"
description = "Attempt to understand Ashampoo Burning Stutio file format *.ashprj"
readme = "README.md"
requires-python = ">=3.0"
keywords = ["Ashampoo", ""]
authors = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"},
]
maintainers = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"}
]
dependencies = [
    "pydantic",
    "progress>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[project.scripts]
ashprj_open = "ashprj.ashprj:main"

[tool.setuptools]
packages = ["ashprj"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
