[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_backup_tool"
version = "1.0"
description = "Python script that helps to burn files to multiple CD/DVD/BR files formats"
readme = "README.md"
requires-python = ">=3.0"
keywords = ["Ashampoo", ""]
authors = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"},
]
maintainers = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"}
]
dependencies = [
    "pydantic",
    "progress>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[project.scripts]
python_backup_tool = "python_backup_tool.python_backup_tool:main"

[tool.setuptools]
packages = ["python_backup_tool"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
